Fixed z-indexed

--- a/app/styles/talking-heads.less
+++ b/app/styles/talking-heads.less
@@ -13,6 +13,7 @@ body {
 
   .title {
     margin-top: 40px;
+
     h1 {
       font-family: @sansFontFamily;
       .font-size(90);
@@ -35,7 +36,7 @@ body {
       line-height: 1.3;
       .font-size(22);
       font-weight: 200;
-      z-index: 1100;
+      z-index: 990;
     }
   }
 }
@@ -56,6 +57,10 @@ body {
   }
 }
 
+.tools {
+
+}
+
 @border-color: rgba(255,255,255,0.2);
 
 .filter-item {
@@ -65,6 +70,7 @@ body {
   text-transform: uppercase;
   color: #fff;
   padding: 10px;
+  background-color: transparent;
 
   &:hover {
     text-decoration: none;
@@ -90,7 +96,7 @@ body {
 
 #chart-modes {
   margin-top: 40px;
-  z-index: 1100;
+  z-index: 990;
 
   ul {
     margin: 0;
@@ -100,6 +106,7 @@ body {
     list-style: none;
     border-top: 1px solid @border-color;
     cursor: pointer;
+
     &:hover {
       background-color: rgba(255, 255, 255, 0.1);
       text-decoration: none;
@@ -146,9 +153,9 @@ body {
   }
 }
 
-.chart-filters {
+#chart-filters {
   margin-top: 20px;
-  z-index: 1100;
+  z-index: 990;
 
   h3 {
     .font-size(12);
@@ -158,6 +165,7 @@ body {
 
   .dropdown-filter {
     margin: 0 0 10px 0;
+
     &:hover {
       background-color: rgba(255, 255, 255, 0.1);
       text-decoration: none;
@@ -238,7 +246,7 @@ body {
 
 .filter-party {
   margin-top: 10px;
-  z-index: 1100;
+  z-index: 990;
 }
 
 .boolean-filter {
